<resources>
    <string name="app_name">RecipEZ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oath_web_client_id">158528567702-cla9vjg1b8mj567gnp1arb90870b001h.apps.googleusercontent.com</string>

    <!-- Recipe (Main Screen) Fragment -->
    <string name="recipe_card_placeholder_text">Recipe Name</string>
    <string name="recipe_list_based_on_your_pantry_text">Suggestions based on your pantry</string>
    <string name="dialog_filter_search_title">Search By Custom Filters</string>
    <string name="dialog_filter_list_title">Filters</string>
    <string name="dialog_filter_search_button">Search</string>
    <string name="dialog_filter_dairy_free_checkbox">Dairy free</string>
    <string name="dialog_filter_gluten_free_checkbox">Gluten free</string>
    <string name="dialog_filter_vegetarian_checkbox">Vegetarian</string>
    <string name="dialog_filter_vegan_checkbox">Vegan</string>
    <string name="dialog_ingredient_list_title">Ingredients</string>
    <string name="filter_ingredient_item_checkbox">Ingredient name</string>
    <string name="placeholder_no_recipe_text">No recipes found</string>
    <string name="missing_ingredient_count_text">\? / \?</string>

    <!-- Recipe (Details) Fragment -->
    <string name="recipe_detail_title">Recipe Title</string>
    <string name="recipe_detail_ingredient_title">Ingredients</string>
    <string name="recipe_detail_ingredient_list">Ingredients List</string>
    <string name="recipe_detail_instructions_title">Directions</string>
    <string name="recipe_detail_instructions_list">Instructions List</string>
    <string name="recipe_detail_nutrition_title">Nutritional Details</string>
    <string name="recipe_detail_nutrition_list">Nutritional Details List</string>
    <string name="add_to_bookmark_title">Add to a bookmark folder</string>
    <string name="dialog_add_to_bookmark_confirm_button">Confirm</string>
    <string name="dialog_add_to_bookmark_new_folder_text">\nCreate new folders in: Profile -> Bookmarked Recipes</string>
    <string name="dialog_add_to_bookmark_existing_folder_text">This recipe is not in any folders</string>
    <string name="dialog_add_to_bookmark_remove_button">Remove bookmark</string>

    <!-- Profile Fragment -->
    <string name="user_pref_name_text">Your name</string>
    <string name="allergy_and_restrictions_text">Allergy and Food Restrictions</string>
    <string name="bookmarked_list_text">Bookmarked Recipes</string>
    <string name="sign_out_button">Sign Out</string>

    <!-- Bookmark List Fragment -->
    <string name="bookmark_fragment_title">Bookmarks</string>
    <string name="bookmarked_list_title_text">Bookmarked Recipes</string>
    <string name="folder_name_text">Folder name</string>
    <string name="add_folder_dialog_button">New Folder</string>
    <string name="dialog_new_folder_title">Create new folder</string>
    <string name="dialog_new_folder_name_input">Enter folder name</string>
    <string name="dialog_new_folder_confirm_button">Done</string>
    <string name="empty_folder_name_toast_msg">Please enter a folder name</string>
    <string name="duplicate_folder_name_toast_msg">A folder with the same name already exists</string>
</resources>