<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:minHeight="70dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/linear_folder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative_folder_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/folder_name_text"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignParentStart="false"
                android:layout_gravity="center"
                android:layout_marginLeft="22dp"
                android:gravity="center"
                android:text="@string/folder_name_text"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/folder_delete_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/expandable_folder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folder_child_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>