<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Recipes"
        android:icon="@drawable/ic_baseline_book_24"
        android:id="@+id/recipes"
        app:showAsAction="always"/>
    <item android:title=""
        android:id="@+id/spacer"
        app:showAsAction="always"
        android:enabled="false"/>
    <item android:title="Profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:id="@+id/profile"
        app:showAsAction="always"/>
</menu>