...
        android:id="@+id/dialog_filter_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_to_bookmark_existing_folder_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_bookmark_folder_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_row_folder_dialog"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/dialog_add_to_bookmark_new_folder_text"
...
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="start"
            android:text="@string/dialog_add_to_bookmark_remove_button" />

        <Button
            android:id="@+id/add_to_bookmark_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:text="@string/dialog_add_to_bookmark_confirm_button" />
    </RelativeLayout>
...
